Started on the report

--- a/Project1-report/Latex template.tex
+++ b/Project1-report/Latex template.tex
@@ -29,8 +29,8 @@
 \fancyhf{}
 
 \newcommand{\Z}{\mathbb{Z}}
-\lhead{Programming Languages (DM552))}
-\rhead{Mark Jervelund (Mjerv15)}
+\lhead{Database Management Systems (DM556))}
+\rhead{Mark Jervelund (Mjerv15) Troels Petersen (trpet15)}
 \rfoot{Page  \thepage \, of \pageref{LastPage}}
 \counterwithin*{equation}{section}
 
@@ -45,6 +45,24 @@
 }
 
 \begin{document}
+\begin{titlepage}
+\centering
+    \vspace*{9\baselineskip}
+    \huge
+    \bfseries
+    Project 1\\
+    
+    \normalfont 
+	\huge    
+    Database Management Systems (DM556)  \\[4\baselineskip]
+    \normalfont
+	\includegraphics[scale=1.5]{SDU_Logo}
+    \vfill\ 
+    \vspace{5mm}
+    IMADA \\
+Mark Jervelund (Mjerv15) Troels Petersen (trpet15)
+    \textbf{\datedate}  \bf{at 16-20} \\[2\baselineskip]
+\end{titlepage}
 %\renewcommand{\thepage}{\roman{page}}% Roman numerals for page counter
 %\tableofcontents
 
@@ -52,8 +70,10 @@
 \setcounter{page}{1}
 \renewcommand{\thepage}{\arabic{page}}
 
-\lstset{language=Haskell}          % Set your language (you can change the language for each code-block optionally)
-
+\lstset{language=Java}          % Set your language (you can change the language for each code-block optionally)
+\section{Overall Status}
+The overall status of of project is that we 
+\section{Division of Labor}
 \subsection{Specification}
 
 
