--- a/Project1-report/Latex template.tex
+++ b/Project1-report/Latex template.tex
@@ -100,20 +100,25 @@ Pickvictim gets the index for the first unpinned page, and returns -1 if all pag
 Flushpages was implementing using Flushpage as they're almost doing the same and this reduces the amount of dubplicate code. 
 
 \subsection{Implementation}
+Freepage First checks if the page is pinned. If its not, it then deallocates the page from disk.
+\lstinputlisting[firstline=132,lastline=187,frame=single]{../dm556-project1/bufmgr/BufMgr.java}
+\vspace{10mm}
 
+\lstinputlisting[firstline=100,lastline=110,frame=single]{../dm556-project1/bufmgr/BufMgr.java}
+\vspace{10mm}
 Pickvictim is implemented to return the index for the first element with pincnt 0. and if all elements are in use it returns -1 to indicate this.
-\lstinputlisting[firstline=37,lastline=51]{../dm556-project1/bufmgr/Clock.java}
+\lstinputlisting[firstline=37,lastline=51, frame=single]{../dm556-project1/bufmgr/Clock.java}
 
 \subsection{Testing}
-
+From the testing we've done the programs gets into a neverending loop pin/unpin loop at SystemCatalog = new Catalog(false) in Minibase.java line 79 (my file with some print statements for debugging)
 \subsection{Conclusion}
 
 
 
 \section{Appendix}
 Pickvictim
-\lstinputlisting[firstline=37,lastline=51]{../dm556-project1/bufmgr/Clock.java}
+\lstinputlisting[firstline=37,lastline=46, frame=single]{../dm556-project1/bufmgr/Clock.java}
 
 bufmgr.java
-\lstinputlisting{../dm556-project1/bufmgr/BufMgr.java}
+\lstinputlisting[frame=single]{../dm556-project1/bufmgr/BufMgr.java}
 \end{document}
