minor additions to report.

--- a/Project1-report/Latex template.tex
+++ b/Project1-report/Latex template.tex
@@ -74,7 +74,7 @@
 \section{Overall Status}
 The overall status of of project is that we hit some bugs we that don't understand and are handing in this part of the project so we can get feedback and fix the current issues when we hand it Project 3.
 \section{Division of Labor}
-We worked on the project either sitting together at the university or at home remotely working together and spliting tasks when possible.
+We worked on the project either sitting together at the university or at home remotely working together and spliting tasks when possible. We spent a lot of time trying to make implement pinPage, whereas the rest of the functions were simple to implement. 
 \subsection{Specification}
 We were tasked with implementing the following functions for the bufmgr.java\\
 
