Fixed some bugs. more to be fixed.

--- a/Project1-report/Latex template.tex
+++ b/Project1-report/Latex template.tex
@@ -1,4 +1,4 @@
-%Template by Mark Jervelund - D1 - 2015 - mjerv15@student.sdu.dk
+	%Template by Mark Jervelund - D1 - 2015 - mjerv15@student.sdu.dk
 
 \documentclass[a4paper,10pt,titlepage]{report}
 
@@ -79,7 +79,7 @@ We worked on the project either sitting together at the university or at home re
 \subsection{Specification}
 We were tasked with implementing the following functions for the bufmgr.java\\
 
-freePage, pinPage, unpinPage, flushPage, flushAllPages, getNumBuffers, getNumUnpinned and pickVictim. \\
+freePage, pinPage, unpinPage, flushPage, flushAllPages, getNumBuffers, getNumUnpinned and pick victim. \\
 
 freePage should deallocate a page from disk.\\
 
